--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,6 @@ jobs:
 
             -   name: Run PHPUnit
                 run: vendor/bin/phpunit
+
+            -   name: Psalm
+                run: ./vendor/bin/psalm --show-info --threads=8 --diff
