--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,6 @@ jobs:
 
             -   name: Psalm
                 run: ./vendor/bin/psalm --show-info --threads=8 --diff
+
+            -   name: PHPCS
+                run: ./vendor/bin/phpcs -s --runtime-set ignore_warnings_on_exit 1
