--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require-dev": {
         "phpunit/phpunit": "^8.0 | ^9.0",
         "codeclimate/php-test-reporter": "<=0.3.2",
-        "vimeo/psalm": "^4.0"
+        "vimeo/psalm": "^4.0",
+        "slevomat/coding-standard": "^6.0"
     },
     "autoload": {
         "psr-4": {
