--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     "prefer-stable": true,
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.2 | ^8.0",
+        "php": "^7.1 | ^8.0",
         "psr/container": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0 | ^9.0",
+        "phpunit/phpunit": "^7.0 | ^8.0 | ^9.0",
         "codeclimate/php-test-reporter": "<=0.3.2",
         "vimeo/psalm": "^4.0",
         "slevomat/coding-standard": "^6.0"
