--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^7.1 | ^8.0",
-        "psr/container": "^1.0"
+        "psr/container": "^1.0",
+        "dhii/services-interface": "^0.1.0-alpha1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0 | ^8.0 | ^9.0",
