--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,12 @@
     },
     "scripts": {
         "test": "phpunit",
-        "csfix": "php-cs-fixer fix -vvv"
+        "csfix": "php-cs-fixer fix -vvv",
+        "psalm": "psalm --show-info --threads=8 --diff"
+    },
+    "config": {
+        "allow-plugins": {
+          "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
